[package]
name = "hexstring"
version = "0.1.4"
edition = "2021"
license = "MIT"
keywords = ["hex", "hexadecimal", "string", "utility"]
authors = ["Alexis Le Provost <alexis.leprovost@outlook.com>"]
homepage = "https://github.com/alekece/hexstring-rs"
repository = "https://github.com/alekece/hexstring-rs"
description = "An utility library for handling hexadecimal string"
rust-version = "1.58.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0.126", default-features = false, features = ["std", "derive"], optional = true}
derive_more = { version = "0.99.16", default-features = false, features = ["display"] }
hex = "0.4.3"

[dev-dependencies]
serde_json = "1.0.64"

[features]
default = ["serde"]
